# Ra1

./: .env.example  .gitignore  DECISIONS.md  RA1_Implementation_Plan.md  README.md  docker-compose.yml  librechat.yaml
.github/: dependabot.yml
.plans/: memory-engine-implementation.md  notification-recommender-implementation.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: infisical.py  main.py
backend/app/api/routes/: branches.py  chat.py  knowledge.py  memory.py  notifications.py  persona.py  threads.py  vault.py
backend/app/core/: atrs.py  crypto.py  db.py
backend/app/models/: atrs.py  context.py  gate.py  knowledge.py  memory.py  model.py  notification.py  orchestrator.py  output.py  persona.py  recommender.py  safety.py  vault.py
backend/app/services/: context_assembler.py  fallback_router.py  free_tier.py  input_engine.py  litellm_service.py  memory_engine.py  model_engine.py  notification_engine.py  orchestrator.py  output_engine.py  persona_engine.py  quality_gate.py  recommender_engine.py  safety_engine.py  search_engine.py  task_matcher.py  usage_tracker.py  vault.py
backend/tests/: __init__.py  conftest.py  test_atrs.py  test_context_assembler.py  test_input_engine.py  test_memory_engine.py  test_model_engine.py  test_notification_engine.py  test_orchestrator.py  test_output_engine.py  test_persona_engine.py  test_quality_gate.py  test_recommender_engine.py  test_safety_engine.py  test_search_engine.py  test_vault.py
frontend/: index.html  package.json  vite.config.ts
scripts/: seed-vault.sh
(+23 files in other folders)
