[project]
name = "ra1-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "infisicalsdk>=1.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "redis>=5.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
